new file:   img/hm/Bulat Department/KWU.png 	new file:   img/hm/Bulat Department/Kaderisasi.png 	new file:   img/hm/Bulat Department/MediaInformasi.png 	new file:   img/hm/Bulat Department/MinatBakat.png 	new file:   img/hm/Bulat Department/Sosial.png 	new file:   img/hm/Bulat Panti&Kadep/Ardi.png 	new file:   img/hm/Bulat Panti&Kadep/Cinta.png 	new file:   img/hm/Bulat Panti&Kadep/Elvina.png 	new file:   img/hm/Bulat Panti&Kadep/Felis.png 	new file:   img/hm/Bulat Panti&Kadep/Jesly.png 	new file:   img/hm/Bulat Panti&Kadep/Sasha.png 	new file:   img/hm/Bulat Panti&Kadep/Tyas.png 	new file:   img/hm/Bulat Panti&Kadep/Wenda.png 	new file:   img/hm/Bulat Panti&Kadep/Yogtan.png 	modified:   index.html 	modified:   kostom.css 	modified:   profil.html 	modified:   style.css

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 }
 
 #kel12 {
-  background-color: #eee;
+  background-color: #ffffff;
 }
 
 .judul,
@@ -81,7 +81,7 @@ h4:hover:after {
 
 /* Navbar */
 .nav-side {
-  background-color: #7a3081;
+  background-color: #d7d6d7;
 }
 
 .navbar {
@@ -619,7 +619,7 @@ b {
 /* MOBILE VERSION */
 @media (max-width: 991px) {
   .nav-top {
-    background-color: #7a3081;
+    background-color: #d7d6d7;
   }
 
   .content-scroll .card-body {
