--- a/kostom.css
+++ b/kostom.css
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poller+One&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
+
+@font-face {
+  font-family: "Akira-Expanded";
+  src: url("/fonts/Akira-Expanded-Demo.otf") format("otf");
+}
 *{
   margin: 0;
   box-sizing: border-box;
@@ -597,16 +602,40 @@ button.next-gallery img:hover, button.before-gallery img:hover{
 
 /* Org-Structure Section */
 .org-structure{
-  padding-top: 8em;
-  padding-bottom: 8em;
+  padding-top: 5em;
+  padding-bottom: 10em;
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-height: 100vh;
   background-color: white;
 }
 .org-structure h2{
+  font-family: Akira-Expanded, sans-serif;
+  font-size: 50px;
+  font-weight: 700;
+  line-height: 81px;
+  letter-spacing: 0em;
+  text-align: left;
+  position:relative;
+
   text-align: center;
   line-height: 1.5;
+  position: relative;
+  animation-name: fadeIn;
+  animation-duration: 1s;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 .org-structure-item{
   display: flex;
@@ -614,6 +643,7 @@ button.next-gallery img:hover, button.before-gallery img:hover{
   margin-top: 1.5em;
   width: 100%;
 }
+
 .org-structure-item .title{
   margin-bottom: 0.5em;
   font-size: 1.5em;
@@ -628,9 +658,9 @@ button.next-gallery img:hover, button.before-gallery img:hover{
   margin-right: 1.5em;
   justify-content: center;
 }
+
 .structure-card{
   align-items: center;
-  /* width: 100%; */
   width: 519%;
   height: 519;
   border-radius: 1em 0 1em 0;
@@ -652,6 +682,7 @@ button.next-gallery img:hover, button.before-gallery img:hover{
 }
 .structure-card-co img{
   width: 10em !important;
+  height: 10em !important;
 }
 .structure-card:hover{
   transform: scale(1.05);
