modified:   event.css 	modified:   front-end/event.html 	modified:   front-end/index.html 	new file:   img/hm/EventHMIF/Desain_tanpa_judul-removebg-preview.png 	new file:   img/hm/EventHMIF/LOGOIASD.jpg 	new file:   img/hm/EventHMIF/LOGOPORSI (1) (1).png 	new file:   img/hm/EventHMIF/Logo IF Belajar.png 	new file:   img/hm/EventHMIF/Logo IT Days Ver2 (2).png 	new file:   img/hm/EventHMIF/Logo IT Days Ver2.png 	new file:   img/hm/EventHMIF/Logo IT Days.jpg 	new file:   img/hm/Gambar WhatsApp.jpg 	new file:   img/hm/Gambar_WhatsApp-removebg-preview.png 	deleted:    img/hm/Logo HMIF.jpg 	new file:   img/hm/LogoHMIF.png

--- a/event.css
+++ b/event.css
@@ -55,7 +55,7 @@
     width : 100%;
     height: 89vh;
     position : relative;
-    background: url("/img/hm/event/Web\ HMIF.png"),white;
+    background: url("/img/hm/event/Web\ HMIF.png");
     background-position : center;
     background-repeat : no-repeat;
     background-size:100%;
@@ -91,7 +91,7 @@
     top:-132px;
     z-index:98;
     height:139px;
-    background-image: url('../img/Ellipse\ 1.png');
+    background-image: url('/img/hm/Gambar_WhatsApp-removebg-preview.png');
     background-position: center;
     background-repeat:no-repeat;
     background-size:100%;
